--- a/src/index.html
+++ b/src/index.html
@@ -93,6 +93,109 @@
 							<span>Очистить корзину</span>
 						</button>
 					</div>
+
+					<div class="radio-group-wrapper">
+						<div class="radio-group">
+							<div class="radio-group__label">Вид оплаты</div>
+
+							<div class="radio-group__inner">
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="payment"
+										value="" />
+									<span class="radio__title">Оплата наличными</span>
+								</label>
+
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="payment"
+										value="" />
+									<span class="radio__title">Выезд курьера за оплатой</span>
+								</label>
+
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="payment"
+										value="" />
+									<span class="radio__title">Оплата онлайн</span>
+								</label>
+							</div>
+						</div>
+
+						<div class="radio-group">
+							<div class="radio-group__label">Способ получения заказа</div>
+
+							<div class="radio-group__inner">
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="take"
+										value="" />
+									<span class="radio__title">Доставка</span>
+								</label>
+
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="take"
+										value="" />
+									<span class="radio__title"
+										>Самовывоз с метро Нагатинская</span
+									>
+								</label>
+
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="take"
+										value="" />
+									<span class="radio__title">Доставка бесплатно</span>
+								</label>
+							</div>
+						</div>
+
+						<div class="radio-group">
+							<div class="radio-group__label">Способ подтверждения заказа</div>
+
+							<div class="radio-group__inner">
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="confirm"
+										value="" />
+									<span class="radio__title">Не имеет значения</span>
+								</label>
+
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="confirm"
+										value="" />
+									<span class="radio__title">Звонок на телефон</span>
+								</label>
+
+								<label class="radio">
+									<input
+										type="radio"
+										class="radio__input"
+										name="confirm"
+										value="" />
+									<span class="radio__title">WhatsApp</span>
+								</label>
+							</div>
+						</div>
+					</div>
 				</div>
 			</main>
 			@include('./assets/html/components/footer.html')
