--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 	<body>
 		<div class="app">
 			@include('./assets/html/components/header.html')
-			<main class="main">
+			<main class="main" style="padding: 40px 0">
 				<div class="container">
 					<div class="cart">
 						<h2 class="cart__title">Моя корзина</h2>
