--- a/src/index.html
+++ b/src/index.html
@@ -4,99 +4,98 @@
 	<body>
 		<div class="app">
 			@include('./assets/html/components/header.html')
-			<main class="main" style="padding: 100px 0">
-				<div
-					class="container"
-					style="display: flex; flex-direction: column; gap: 100px">
-					<div class="cart">
-						<h2 class="cart__title">Моя корзина</h2>
+			<main class="main">
+				<div class="cart">
+					<h2 class="cart__title">Моя корзина</h2>
 
-						<div class="cart__products">
-							<div class="cart-product">
-								<h3 class="cart-product__title">
-									Фольгированный шар «Сверкающая бабочка»
-								</h3>
+					<div class="cart__products">
+						<div class="cart-product">
+							<h3 class="cart-product__title">
+								Фольгированный шар «Сверкающая бабочка»
+							</h3>
 
-								<div class="cart-product__body">
-									<img
-										src="https://images.unsplash.com/photo-1530103862676-de8c9debad1d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-										alt=""
-										class="cart-product__img" />
+							<div class="cart-product__body">
+								<img
+									src="https://images.unsplash.com/photo-1530103862676-de8c9debad1d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+									alt=""
+									class="cart-product__img" />
 
-									<div class="cart-product__inner">
-										<div class="cart-product__counter-wrapper">
-											<div class="counter">
-												<button class="counter__decrement btn-reset">-</button>
-												<input
-													min="1"
-													max="999"
-													type="number"
-													class="counter__input input-reset" />
-												<button class="counter__increment btn-reset">+</button>
-											</div>
-											<div class="cart-product__text">шт</div>
+								<div class="cart-product__inner">
+									<div class="cart-product__counter-wrapper">
+										<div class="counter">
+											<button class="counter__decrement btn-reset">-</button>
+											<input
+												min="1"
+												value="1"
+												max="999"
+												type="number"
+												class="counter__input input-reset" />
+											<button class="counter__increment btn-reset">+</button>
 										</div>
-
-										<div class="cart-product__box">
-											<div class="cart-product__price">750 руб.</div>
-											<button class="cart-product__btn btn-reset">
-												<svg width="10" height="10">
-													<use href="./assets/img/svg/sprite.svg#close"></use>
-												</svg>
-											</button>
-										</div>
+										<div class="cart-product__text">шт</div>
 									</div>
-								</div>
-							</div>
 
-							<div class="cart-product">
-								<h3 class="cart-product__title">
-									Фольгированный шар «Сверкающая бабочка»
-								</h3>
-
-								<div class="cart-product__body">
-									<img
-										src="https://images.unsplash.com/photo-1530103862676-de8c9debad1d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
-										alt=""
-										class="cart-product__img" />
-
-									<div class="cart-product__inner">
-										<div class="cart-product__counter-wrapper">
-											<div class="counter">
-												<button class="counter__decrement btn-reset">-</button>
-												<input
-													min="1"
-													max="999"
-													type="number"
-													class="counter__input input-reset" />
-												<button class="counter__increment btn-reset">+</button>
-											</div>
-											<div class="cart-product__text">шт</div>
-										</div>
-
-										<div class="cart-product__box">
-											<div class="cart-product__price">750000 руб.</div>
-											<button class="cart-product__btn btn-reset">
-												<svg width="10" height="10">
-													<use href="./assets/img/svg/sprite.svg#close"></use>
-												</svg>
-											</button>
-										</div>
+									<div class="cart-product__box">
+										<div class="cart-product__price">750 руб.</div>
+										<button class="cart-product__btn btn-reset">
+											<svg width="10" height="10">
+												<use href="./assets/img/svg/sprite.svg#close"></use>
+											</svg>
+										</button>
 									</div>
 								</div>
 							</div>
 						</div>
 
-						<button class="cart__clear-btn btn-reset">
-							<svg width="10" height="10">
-								<use href="./assets/img/svg/sprite.svg#close"></use>
-							</svg>
+						<div class="cart-product">
+							<h3 class="cart-product__title">
+								Фольгированный шар «Сверкающая бабочка»
+							</h3>
 
-							<span>Очистить корзину</span>
-						</button>
+							<div class="cart-product__body">
+								<img
+									src="https://images.unsplash.com/photo-1530103862676-de8c9debad1d?q=80&w=2070&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D"
+									alt=""
+									class="cart-product__img" />
+
+								<div class="cart-product__inner">
+									<div class="cart-product__counter-wrapper">
+										<div class="counter">
+											<button class="counter__decrement btn-reset">-</button>
+											<input
+												min="1"
+												value="1"
+												max="999"
+												type="number"
+												class="counter__input input-reset" />
+											<button class="counter__increment btn-reset">+</button>
+										</div>
+										<div class="cart-product__text">шт</div>
+									</div>
+
+									<div class="cart-product__box">
+										<div class="cart-product__price">750000 руб.</div>
+										<button class="cart-product__btn btn-reset">
+											<svg width="10" height="10">
+												<use href="./assets/img/svg/sprite.svg#close"></use>
+											</svg>
+										</button>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 
-					<div class="radio-group-wrapper">
+					<button class="cart__clear-btn btn-reset">
+						<svg width="10" height="10">
+							<use href="./assets/img/svg/sprite.svg#close"></use>
+						</svg>
+
+						<span>Очистить корзину</span>
+					</button>
+				</div>
+				<div class="order-layout">
+					<div class="order-layout__radio-group radio-group-wrapper">
 						<div class="radio-group">
 							<div class="radio-group__label">Вид оплаты</div>
 
@@ -199,10 +198,59 @@
 						</div>
 					</div>
 
-					<form action="#" method="post" class="order-form">
-						<div class="order-form__row">
-							<div class="order-form__field field field--required">
-								<label for="order-form-name" class="field__label">Имя</label>
+					<div class="order-layout__col">
+						<div class="order-form">
+							<div class="order-form__row">
+								<div class="order-form__field field field--required">
+									<label for="order-form-name" class="field__label">Имя</label>
+
+									<input
+										type="text"
+										class="field__input input-reset"
+										name="order-form-name"
+										id="order-form-name"
+										required />
+								</div>
+
+								<div class="order-form__field field field--required">
+									<label for="order-form-phone" class="field__label"
+										>Телефон</label
+									>
+									<input
+										type="number"
+										class="field__input input-reset"
+										name="order-form-phone"
+										id="order-form-phone"
+										required />
+								</div>
+							</div>
+
+							<div class="order-form__row">
+								<div class="order-form__field field field--required">
+									<label for="order-form-date" class="field__label">Дата</label>
+
+									<input
+										type="date"
+										class="field__input input-reset"
+										name="order-form-date"
+										id="order-form-date"
+										required />
+								</div>
+
+								<div class="order-form__field field">
+									<input
+										type="time"
+										class="field__input input-reset"
+										name="order-form-time"
+										id="order-form-time" />
+									<label for="order-form-time" class="field__label"
+										>Время</label
+									>
+								</div>
+							</div>
+
+							<div class="order-form__field field">
+								<label for="order-form-name" class="field__label">Адрес</label>
 
 								<input
 									type="text"
@@ -212,111 +260,68 @@
 									required />
 							</div>
 
-							<div class="order-form__field field field--required">
-								<label for="order-form-phone" class="field__label"
-									>Телефон</label
-								>
-								<input
-									type="number"
-									class="field__input input-reset"
-									name="order-form-phone"
-									id="order-form-phone"
-									required />
-							</div>
-						</div>
-
-						<div class="order-form__row">
-							<div class="order-form__field field field--required">
-								<label for="order-form-date" class="field__label">Дата</label>
-
-								<input
-									type="date"
-									class="field__input input-reset"
-									name="order-form-date"
-									id="order-form-date"
-									required />
-							</div>
-
 							<div class="order-form__field field">
+								<label for="order-form-comment" class="field__label"
+									>Комментарий</label
+								>
+
+								<textarea
+									name="comment"
+									id=""
+									class="field__textarea input-reset"
+									placeholder=""></textarea>
+							</div>
+						</div>
+
+						<div class="promo">
+							<div class="promo__row">
 								<input
-									type="time"
-									class="field__input input-reset"
-									name="order-form-time"
-									id="order-form-time" />
-								<label for="order-form-time" class="field__label">Время</label>
+									type="text"
+									placeholder="Промокод"
+									class="promo__input input-reset" />
+
+								<button class="promo__btn btn-reset">Применить</button>
+							</div>
+
+							<div class="promo__result">
+								Скидка в корзине <span>0</span> рублей
 							</div>
 						</div>
+					</div>
 
-						<div class="order-form__field field">
-							<label for="order-form-name" class="field__label">Адрес</label>
-
-							<input
-								type="text"
-								class="field__input input-reset"
-								name="order-form-name"
-								id="order-form-name"
-								required />
-						</div>
-
-						<div class="order-form__field field">
-							<label for="order-form-comment" class="field__label"
-								>Комментарий</label
-							>
-
-							<textarea
-								name="comment"
-								id=""
-								class="field__textarea input-reset"
-								placeholder=""></textarea>
-						</div>
-					</form>
-
-					<form action="#" method="post" class="promo">
-						<div class="promo__row">
-							<input
-								type="text"
-								placeholder="Промокод"
-								class="promo__input input-reset" />
-
-							<button class="promo__btn btn-reset">Применить</button>
-						</div>
-
-						<div class="promo__result">
-							Скидка в корзине <span>0</span> рублей
-						</div>
-					</form>
-
-					<div class="order-info">
-						<div class="order-info__top">
-							<div class="order-info__row">
-								<div class="order-info__text"><span>Итого: 20 шт</span></div>
-								<div class="order-info__title">
-									8000 <span class="order-info__currency">руб.</span>
+					<div class="order-layout__order-details order-details">
+						<div class="order-details__top">
+							<div class="order-details__row">
+								<div class="order-details__text">
+									<span>Итого: 20 шт</span>
+								</div>
+								<div class="order-details__title">
+									8000 <span class="order-details__currency">руб.</span>
 								</div>
 							</div>
 
-							<div class="order-info__row">
-								<div class="order-info__text">Стоимость доставки:</div>
-								<div class="order-info__title">
-									390 <span class="order-info__currency">руб.</span>
+							<div class="order-details__row">
+								<div class="order-details__text">Стоимость доставки:</div>
+								<div class="order-details__title">
+									390 <span class="order-details__currency">руб.</span>
 								</div>
 							</div>
 						</div>
 
-						<div class="order-info__row">
-							<div class="order-info__title">Итого</div>
-							<div class="order-info__amount">
-								8390 <span class="order-info__currency">руб.</span>
+						<div class="order-details__row">
+							<div class="order-details__title">Итого</div>
+							<div class="order-details__amount">
+								8390 <span class="order-details__currency">руб.</span>
 							</div>
 						</div>
 
-						<div class="order-info__hint">
+						<div class="order-details__hint">
 							выезд за МКАД оплачивается отдельно
 						</div>
 
-						<button class="order-info__btn btn-reset">Оформить заказ</button>
+						<button class="order-details__btn btn-reset">Оформить заказ</button>
 
-						<div class="order-info__politic">
+						<div class="order-details__politic">
 							Нажимая кнопку "Оформить заказ" Вы соглашаетесь c обработкой ваших
 							данных, согласно <a
 								href="https://bighappy.ru/politika-konfidenczialnosti/"
