--- a/src/index.html
+++ b/src/index.html
@@ -123,6 +123,53 @@
 						</div>
 					</div>
 				</section>
+
+				<section class="benefits">
+					<div class="container">
+						<div class="benefits__top">
+							<h2 class="benefits__title">Почему нужно заказывать у нас</h2>
+						</div>
+						<div class="benefits__cards">
+							<div class="benefits-card">
+								<div class="benefits-card__top">
+									<img
+										class="benefits-card__icon"
+										src="./assets/img/svg/car.svg"
+										alt="" />
+									<h3 class="benefits-card__title">Бесплатная доставка</h3>
+								</div>
+								<p class="benefits-card__text">
+									при заказе от 6900₽ в интервале 4 часа
+								</p>
+							</div>
+							<div class="benefits-card">
+								<div class="benefits-card__top">
+									<img
+										class="benefits-card__icon"
+										src="./assets/img/svg/balloon.svg"
+										alt="" />
+									<h3 class="benefits-card__title">Гарантия полета</h3>
+								</div>
+								<p class="benefits-card__text">
+									Привезем замену, если шары сдуются раньше 3-х суток
+								</p>
+							</div>
+							<div class="benefits-card">
+								<div class="benefits-card__top">
+									<img
+										class="benefits-card__icon"
+										src="./assets/img/svg/balloons.svg"
+										alt="" />
+									<h3 class="benefits-card__title">Выезд оформителя</h3>
+								</div>
+								<p class="benefits-card__text">
+									При необходимости профессиональный оформитель красиво
+									расставит и привяжет шарики
+								</p>
+							</div>
+						</div>
+					</div>
+				</section>
 			</main>
 			@include('./assets/html/components/footer.html')
 		</div>
